[gd_scene load_steps=14 format=2]

[ext_resource path="res://Dialogos/dialogo_inicial.gd" type="Script" id=1]
[ext_resource path="res://sprites/trutinha_vtal_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/invisivel.png" type="Texture" id=3]
[ext_resource path="res://sprites/balão (2).png" type="Texture" id=4]
[ext_resource path="res://sprites/cenario das falas.png" type="Texture" id=5]
[ext_resource path="res://sprites/trutinha_vtal_2.png" type="Texture" id=6]
[ext_resource path="res://Fonte/rainyhearts/rainyhearts.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Fonte/upheaval/upheavtt.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://sprites/gray_empty_button.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "trutinha_vtal_falando"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ ExtResource( 2 ), ExtResource( 6 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 7 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_horizontal_guides_": [ 374.0 ]
}

[node name="touch" type="TouchScreenButton" parent="."]
position = Vector2( -304, -181 )
normal = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 181.5, 321 )
scale = Vector2( 1.33704, 1.34167 )
z_index = -3
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 224.0
margin_top = 164.0
margin_right = 224.0
margin_bottom = 164.0
script = ExtResource( 1 )
dialogPath = "res://Dialogos/dialogo_inicial.json"

[node name="PersonagemVtal" type="Sprite" parent="ColorRect"]
position = Vector2( -150, 192.5 )
scale = Vector2( 0.238357, 0.366886 )
z_index = -2
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/PersonagemVtal"]
anims/trutinha_vtal_falando = SubResource( 1 )

[node name="Button" type="Button" parent="ColorRect"]
margin_left = -51.0
margin_top = 164.0
margin_right = 361.0
margin_bottom = 570.0
rect_scale = Vector2( 0.445614, 0.457057 )
icon = ExtResource( 9 )
flat = true

[node name="Label" type="Label" parent="ColorRect/Button"]
margin_left = 83.0316
margin_top = 179.409
margin_right = 341.032
margin_bottom = 233.409
custom_colors/font_color = Color( 1, 0.85098, 0.247059, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Começar"

[node name="Name" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -205.0
margin_top = 324.0
margin_right = -21.0
margin_bottom = 361.0
custom_fonts/normal_font = SubResource( 2 )

[node name="Text" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -214.0
margin_top = 362.0
margin_right = 114.0
margin_bottom = 457.0
custom_fonts/normal_font = SubResource( 3 )

[node name="balaodefalaVtal" type="Sprite" parent="ColorRect"]
position = Vector2( -61, 400 )
rotation = 3.14086
scale = Vector2( 1.68187, -0.918489 )
z_index = -1
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="ColorRect"]

[connection signal="pressed" from="touch" to="ColorRect" method="_on_touch_pressed"]
[connection signal="pressed" from="ColorRect/Button" to="ColorRect" method="_on_Button_pressed"]
